fix sides of the tiles not showing in safari

--- a/client/style/games/azul.sass
+++ b/client/style/games/azul.sass
@@ -138,6 +138,8 @@
     justify-content: center
     left: calc(50% - 320px)
     position: absolute
+    // Fixes the sides of the tiles not showing in Safari
+    transform: translateZ(0)
 
     .azul__tile
         margin: 4px 0
